# cosmos-newlib

./: .gitignore  COPYING.NEWLIB  config.sub  configure  configure.ac
newlib/: configure.host
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/cosmos/: Makefile.am  Makefile.in  configure  configure.ac  cosmos.c  regenerate.sh
newlib/libc/sys/cosmos/machine/: Makefile.in  aclocal.m4  configure  configure.ac  regenerate.sh
newlib/libc/sys/cosmos/machine/arm/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  crt0.S  regenerate.sh  syscall.S
